--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Mahesh\AppData\Local\Temp\testng-eclipse-1259569362\testng-customsuite.xml</span>
+                    <span>C:\Users\Mahesh\AppData\Local\Temp\testng-eclipse--3624253\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="MyTestRunner.MyRun" class="method navigator-link" hash-for-method="runScenario(&quot;Search Customer by Email&quot;, &quot;Customer&quot;)">runScenario("Search Customer by Email", "Customer")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="MyTestRunner.MyRun" class="method navigator-link" hash-for-method="runScenario(&quot;Successful Login with Valid Credentials&quot;, &quot;Login&quot;)">runScenario("Successful Login with Valid Credentials", "Login")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -119,12 +119,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="MyTestRunner.MyRun" class="method navigator-link" hash-for-method="runScenario(&quot;Search Customer by Name&quot;, &quot;Customer&quot;)">runScenario("Search Customer by Name", "Customer")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="MyTestRunner.MyRun" class="method navigator-link" hash-for-method="runScenario(&quot;Search Customer by Email&quot;, &quot;Customer&quot;)">runScenario("Search Customer by Email", "Customer")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="MyTestRunner.MyRun" class="method navigator-link" hash-for-method="runScenario(&quot;Successful Login with Valid Credentials&quot;, &quot;Login&quot;)">runScenario("Successful Login with Valid Credentials", "Login")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="MyTestRunner.MyRun" class="method navigator-link" hash-for-method="runScenario(&quot;Search Customer by Name&quot;, &quot;Customer&quot;)">runScenario("Search Customer by Name", "Customer")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -147,10 +147,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Search Customer by Email&quot;, &quot;Customer&quot;)">
-                  </a> <!-- runScenario("Search Customer by Email", "Customer") -->
+                  <a name="runScenario(&quot;Successful Login with Valid Credentials&quot;, &quot;Login&quot;)">
+                  </a> <!-- runScenario("Successful Login with Valid Credentials", "Login") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Search Customer by Email", "Customer")</span>
+                  <span class="parameters">("Successful Login with Valid Credentials", "Login")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -177,20 +177,20 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Search Customer by Name&quot;, &quot;Customer&quot;)">
-                  </a> <!-- runScenario("Search Customer by Name", "Customer") -->
+                  <a name="runScenario(&quot;Search Customer by Email&quot;, &quot;Customer&quot;)">
+                  </a> <!-- runScenario("Search Customer by Email", "Customer") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Search Customer by Name", "Customer")</span>
+                  <span class="parameters">("Search Customer by Email", "Customer")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Successful Login with Valid Credentials&quot;, &quot;Login&quot;)">
-                  </a> <!-- runScenario("Successful Login with Valid Credentials", "Login") -->
+                  <a name="runScenario(&quot;Search Customer by Name&quot;, &quot;Customer&quot;)">
+                  </a> <!-- runScenario("Search Customer by Name", "Customer") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Successful Login with Valid Credentials", "Login")</span>
+                  <span class="parameters">("Search Customer by Name", "Customer")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -200,7 +200,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Mahesh\AppData\Local\Temp\testng-eclipse-1259569362\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Mahesh\AppData\Local\Temp\testng-eclipse--3624253\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -210,6 +210,13 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;MyTestRunner.MyRun&quot;/&gt;
+      &lt;class name=&quot;Utitlities.ReadConfig&quot;/&gt;
+      &lt;class name=&quot;MyStepdefinitions.MyStepDef&quot;/&gt;
+      &lt;class name=&quot;PageObjects.MyLoginPage&quot;/&gt;
+      &lt;class name=&quot;PageObjects.MyAddNewCustomerPage&quot;/&gt;
+      &lt;class name=&quot;MyStepdefinitions.Close&quot;/&gt;
+      &lt;class name=&quot;PageObjects.MySearchCustomerPage&quot;/&gt;
+      &lt;class name=&quot;base.Base&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -223,7 +230,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (1 class)</span>
+                <span class="test-name">Default test (8 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -261,28 +268,28 @@ data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'MyTestRunner.MyRun')
-data.setCell(0, 3, 78093);
+data.setCell(0, 3, 32719);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
 data.setCell(1, 2, 'MyTestRunner.MyRun')
-data.setCell(1, 3, 29642);
+data.setCell(1, 3, 30639);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'runScenario')
 data.setCell(2, 2, 'MyTestRunner.MyRun')
-data.setCell(2, 3, 20639);
+data.setCell(2, 3, 20027);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'runScenario')
 data.setCell(3, 2, 'MyTestRunner.MyRun')
-data.setCell(3, 3, 17398);
+data.setCell(3, 3, 18346);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'runScenario')
 data.setCell(4, 2, 'MyTestRunner.MyRun')
-data.setCell(4, 3, 17383);
+data.setCell(4, 3, 17309);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -310,32 +317,32 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">MyTestRunner.MyRun</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@4258106)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@6c7f804c)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">runScenario("Add New Customer", "Customer")</span>
-                <span class="method-start">871 ms</span>
+                <span class="method-start">713 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Search Customer by Email", "Customer")</span>
-                <span class="method-start">78970 ms</span>
+                <span class="method-start">20744 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Search Customer by Name", "Customer")</span>
-                <span class="method-start">108614 ms</span>
+                <span class="method-start">39091 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Successful Login with Valid Credentials", "Login")</span>
-                <span class="method-start">129255 ms</span>
+                <span class="method-start">56402 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Successful Login with Valid Credentials DDT", "Login")</span>
-                <span class="method-start">146641 ms</span>
+                <span class="method-start">89122 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">164042 ms</span>
+                <span class="method-start">119763 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
